--- a/Index.Html/Create Index.Html
+++ b/Index.Html/Create Index.Html
@@ -1,1 +1,10 @@
+<!DOCTYPE html>
+<html>
+<body>
 
+<h1>Delicouis CupCakes</h1>
+
+<p>We have the most Delicouis, Tasty, Noticable cupcakes you can ever find.</p>
+
+</body>
+</html>
