--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,18 @@
-<!DOCTYPE html>
-<html lang="en-US">
 <html>
+  
+  <title>
+  My First Web page 
+  </title>
 <body>
 
 <h1>My First Heading</h1>
 
 <p>My first paragraph.</p>
+  
+  <Style>
+  Background color=blue
+  Text=align left
+  </Style>
 
 </body>
 </html>
