--- a/Index.html
+++ b/Index.html
@@ -11,8 +11,8 @@
   
   <Style>
     body {
-  Background color=blue
-  Text=align left
+  Background-color:blue;
+  Text-align:left;
     }
   </Style>
 
