--- a/Index.html
+++ b/Index.html
@@ -1,20 +1,12 @@
+<!DOCTYPE html>
 <html>
-  
-  <title>
-  My First Web page 
-  </title>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
 <body>
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
-  
-  <Style>
-    body {
-  Background-color:blue;
-  Text-align:left;
-    }
-  </Style>
+<h1>Vincent's Delicious Cupcakes</h1>
+<p>This is a paragraph.</p>
 
 </body>
 </html>
