--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,8 @@
 <body>
 
 <h1>Vincent's Delicious Cupcakes</h1>
-<p>This is a paragraph.</p>
+<p>Vincent's Delicious Cupcakes are the best cupcakes in town.  Some are filled with whipped cream, lemon, cherry and or chocolate.
+  Come on buy and try our delicious cupcakes.</p>
 
 </body>
 </html>
