--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
 <body>
 
 <h1>Vincent's Delicious Cupcakes</h1>
+  <h2>The love of CupCakes</h2>
 <p>Vincent's Delicious Cupcakes are the best cupcakes in town.  Some are filled with whipped cream, lemon, cherry and or chocolate.
   Come on buy and try our delicious cupcakes.</p>
 
