--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Delicouis-CupCake</title>
+  </head>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
