--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
+..<!DOCTYPE html>
 <html>
 <head>
   <title>Delicouis-CupCake</title>
-  <
+  <meta charset="utf-8">
+  <meta name="viewport"content="width=device-width, initial-scale=1">
+  <link rel="stylesheet"href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/ccs/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <link rel="stylesheet" href="styles.css">
-</head>
 <body>
 
 <h1>Vincent's Delicious Cupcakes</h1>
