--- a/Index.html
+++ b/Index.html
@@ -10,24 +10,13 @@
 </head>
 <body>
   
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
-    </ul>
-  </div>
-</nav>
-  
-<div class="container">
-  <h3>Inverted Navbar</h3>
-  <p>An inverted navbar is black instead of gray.</p>
-</div>
+<title>Vincent's Delicious Cupcakes</title>
+  </head>
+  <body>
+
+<h1>Vincent's CupCakes</h1>
+<h2>Best Cupcake in town.</h2>
+<p>The only one.</p>
 
 
 
