--- a/Index.html
+++ b/Index.html
@@ -9,11 +9,34 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
+  <title>Vincent's Delicious Cupcakes</title>
+</head>
   
-<title>Vincent's Delicious Cupcakes</title>
-  </head>
   <body>
-
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Delicouis-Cupcake</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">The ceo</a></li>
+          <li><a href="#">Services offered</a></li>
+          <li><a href="#">annual budget</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Page 2</a></li>
+      <li><a href="#">Page 3</a></li>
+    </ul>
+  </div>
+</nav>
+  
+<div class="container">
+  <h3>Navbar With Dropdown</h3>
+  <p>This example adds a dropdown menu for the "Page 1" button in the navigation bar.</p>
+</div>
 <h1>Vincent's CupCakes</h1>
 <h2>Best Cupcake in town.</h2>
 <p>The only one.</p>
