--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,18 @@
       </li>
       <li><a href="#">Page 2</a></li>
       <li><a href="#">Page 3</a></li>
-    </ul>
+      </ul>
+  
+    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">About Us <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">The ceo</a></li>
+          <li><a href="#">Services offered</a></li>
+          <li><a href="#">annual budget</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Page 2</a></li>
+      <li><a href="#">Page 3</a></li>
+      </ul>
   </div>
 </nav>
   
