--- a/Index.html
+++ b/Index.html
@@ -20,18 +20,19 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">About US <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">The ceo</a></li>
           <li><a href="#">Services offered</a></li>
           <li><a href="#">annual budget</a></li>
         </ul>
       </li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li><a href="#">Gallery</a></li>
+      <li><a href="#">Recipes</a></li>
+      <li><a href="#">Contacts</a></li>
+      <li><a href="#">Maps</a></li>
       </ul>
-  
-    
+      
   </div>
 </nav>
   
