--- a/Index.html
+++ b/Index.html
@@ -25,9 +25,9 @@
       <li class="active"><a href="#">Home</a></li>
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">About US <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">The ceo</a></li>
-          <li><a href="#">Services offered</a></li>
-          <li><a href="#">annual budget</a></li>
+          <li><a href="#">Page 1</a></li>
+          <li><a href="#">Page 2</a></li>
+          <li><a href="#">Page 3</a></li>
       </ul>
       
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Gallery <span class="caret"></span></a>
