--- a/Index.html
+++ b/Index.html
@@ -37,24 +37,24 @@
           <li><a href="#">Page 3</a></li>
       </ul>     
      <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Contacts</a></li>
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> <span class="caret"></span></a>
+      <li class="active"><a href="#"></a></li>
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Contacts <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">Page 1</a></li>
           <li><a href="#">Page 2</a></li>
           <li><a href="#">Page 3</a></li>
       </ul>  
          <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Maps</a></li>
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> <span class="caret"></span></a>
+      <li class="active"><a href="#"></a></li>
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Maps <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">Page 1</a></li>
           <li><a href="#">Page 2</a></li>
           <li><a href="#">Page 3</a></li>
       </ul>  
         <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Recipes</a></li>
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> <span class="caret"></span></a>
+      <li class="active"><a href="#"></a></li>
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Recipes <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">Page 1</a></li>
           <li><a href="#">Page 2</a></li>
