--- a/Index.html
+++ b/Index.html
@@ -48,6 +48,16 @@
   </div>
 </nav>
   
+ <!-- Jumbotron -->
+<div class="container">
+  <div class="jumbotron">
+    <h1>Vincent Delicious CupCakes</h1>      
+    <p>If you really want the best cupcakes in town, then try this website. Best warm, soft, sweet cakes you ever taste in your life.</p>
+  </div>
+  <p>Once you test it you'll love Them.</p>      
+  <p>So come and try our famous delicious cupcake we have, the Triple chocolate CupCake.</p>      
+</div>
+  
 <div class="container">
  <h3>Navbar With Dropdown</h3>
   <p>This example adds a dropdown menu for the "Page 1" button in the navigation bar.</p>
